--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <a href="top_navigation_bar.html">Navigation bar</a>
+    <a href="dropdown_navigation_bar.html">Navigation bar</a>
     <title>MENU</title>
 </head>
 <body>
