--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="top_navigation_bar.html">Navigation bar</a>
-    <a href="dropdown_navigation_bar.html">Navigation bar</a>
     <title>MENU</title>
 </head>
 <body>
-    
+    <a href="top_navigation_bar.html">Top Navigation bar</a>
+    <br>
+    <a href="dropdown_navigation_bar.html">Dropdown Navigation bar</a>
 </body>
 </html>
